--- a/css/custom.css
+++ b/css/custom.css
@@ -11,8 +11,12 @@
 
 
 body {
-    background: #fff;
-    font-family: 'Open Sans';
+    background-image : url('/css/images/fundo.jpg');  
+    background-size  : cover;                        
+    background-repeat: no-repeat;                    
+    background-position: center center; 
+    height: 100vh; 
+    margin: 0; 
 }
 
 #wrapper {
@@ -376,7 +380,7 @@ table.dataTable thead .sorting:after {
 .navbar-default{
 
     box-shadow: -3px 0px 8px -4px rgba(0, 0, 0, 0.07) inset !important;
-    background: none repeat scroll 0% 0% #2780e3 !important;
+    background: none repeat scroll 0% 0% #42ca49 !important;
     font-size: 14px;
     -webkit-box-shadow: inset -3px 0px 8px -4px rgba(0, 0, 0, 0.1);
     -moz-box-shadow: inset -3px 0px 8px -4px rgba(0, 0, 0, 0.1);
